--- a/about.html
+++ b/about.html
@@ -11,56 +11,30 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav" id="mainNav">
+      <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html" class="active">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" id="burgerBtn">&#9776;</button>
-    </div>
-    <div class="mobile-nav" id="mobileNav">
-      <a href="services.html">Услуги</a>
-      <a href="about.html" class="active">О компании</a>
-      <a href="licenses.html">Сертификаты</a>
-      <a href="contacts.html">Контакты</a>
     </div>
   </header>
+
   <main>
     <h1>О компании</h1>
-    <div class="about-block">
-      <p>
-        «Золотарь 58» — профессиональные услуги по откачке и прочистке канализации в Пензе и области. <br>
-        Более 10 лет опыта, собственный автопарк техники, современное оборудование для гидродинамической и механической чистки, видеоинспекции трубопроводов.<br><br>
-        Работаем с физическими и юридическими лицами. Официальные договоры, все необходимые документы, оплата по счету и наличными.<br>
-        Качество и оперативность гарантированы!
-      </p>
-    </div>
+    <p>«Золотарь 58» — профессиональные услуги по откачке и прочистке канализации в Пензе и области.</p>
+    <p>Более 10 лет опыта, собственный автопарк техники, современное оборудование для гидродинамической и механической чистки, видеоинспекции трубопроводов.</p>
+    <p>Работаем с физическими и юридическими лицами. Официальные договоры, все необходимые документы, оплата по счету и наличными.</p>
+    <p>Качество и оперативность гарантированы!</p>
   </main>
+
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
-  <script>
-    const burgerBtn = document.getElementById('burgerBtn');
-    const mobileNav = document.getElementById('mobileNav');
-    burgerBtn.addEventListener('click', () => {
-      mobileNav.classList.toggle('show');
-      if (mobileNav.classList.contains('show')) {
-        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
-          a.onclick = () => mobileNav.classList.remove('show');
-        });
-      }
-    });
-    window.addEventListener('resize', () => {
-      if (window.innerWidth > 600) {
-        mobileNav.classList.remove('show');
-      }
-    });
-  </script>
 </body>
 </html>
