--- a/licenses.html
+++ b/licenses.html
@@ -11,58 +11,36 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav" id="mainNav">
+      <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html" class="active">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
-      <button class="burger" id="burgerBtn">&#9776;</button>
-    </div>
-    <div class="mobile-nav" id="mobileNav">
-      <a href="services.html">Услуги</a>
-      <a href="about.html">О компании</a>
-      <a href="licenses.html" class="active">Сертификаты</a>
-      <a href="contacts.html">Контакты</a>
     </div>
   </header>
+
   <main>
     <h1>Сертификаты и лицензии</h1>
-    <div class="licenses-block">
+    <div class="licenses-list">
       <div class="license-item">
-        <img src="certificate-placeholder1.jpg" alt="Сертификат" class="license-img">
+        <img src="license1.jpg" alt="Скоро здесь появится сертификат" class="license-img">
         <span>Скоро здесь появится сертификат</span>
       </div>
       <div class="license-item">
-        <img src="certificate-placeholder2.jpg" alt="Сертификат" class="license-img">
+        <img src="license2.jpg" alt="Скоро здесь появится лицензия" class="license-img">
         <span>Скоро здесь появится лицензия</span>
       </div>
     </div>
   </main>
+
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
-  <script>
-    const burgerBtn = document.getElementById('burgerBtn');
-    const mobileNav = document.getElementById('mobileNav');
-    burgerBtn.addEventListener('click', () => {
-      mobileNav.classList.toggle('show');
-      if (mobileNav.classList.contains('show')) {
-        Array.from(mobileNav.getElementsByTagName('a')).forEach(a => {
-          a.onclick = () => mobileNav.classList.remove('show');
-        });
-      }
-    });
-    window.addEventListener('resize', () => {
-      if (window.innerWidth > 600) {
-        mobileNav.classList.remove('show');
-      }
-    });
-  </script>
 </body>
 </html>
