--- a/contacts.html
+++ b/contacts.html
@@ -11,40 +11,37 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img big-logo" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
-      <nav class="nav" id="mainNav">
+      <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html" class="active">Контакты</a>
       </nav>
-      <button class="burger" id="burgerBtn">&#9776;</button>
-    </div>
-    <div class="mobile-nav" id="mobileNav">
-      <a href="services.html">Услуги</a>
-      <a href="about.html">О компании</a>
-      <a href="licenses.html">Сертификаты</a>
-      <a href="contacts.html" class="active">Контакты</a>
     </div>
   </header>
+
   <main>
-    <section class="contacts-section">
-      <h1>Контакты</h1>
-      <div class="contacts-card">
-        <div class="contacts-phone-row">
-          <span>Телефон:</span>
-          <a href="tel:+79022073636" class="call-btn">+7 (902) 207-36-36</a>
-        </div>
-        <div>
-          Email: <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a>
-        </div>
-        <div class="contacts-desc">
-          Звоните — работаем 24/7, выезд по Пензе и области
-        </div>
-      </div>
-    </section>
+    <h1>Контакты</h1>
+    <div class="contacts-box">
+      <p>
+        <strong>Телефон:</strong>
+        <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a>
+      </p>
+      <p>
+        <strong>Email:</strong>
+        <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a>
+      </p>
+      <p class="contacts-desc">Звоните — работаем 24/7, выезд по Пензе и области</p>
+    </div>
   </main>
+
   <footer>
-    <div class="container
+    <div class="container">
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+    </div>
+  </footer>
+</body>
+</html>
