--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
@@ -30,8 +31,13 @@
         Современное оборудование, оперативный выезд, гарантия качества.<br>
         Работаем по Пензе и области для физ. и юр. лиц.
       </p>
-      <a class="cta" href="tel:+79022073636">Позвонить</a>
-      <div class="main-phone">Телефон: <a href="tel:+79022073636">+7 (902) 207-36-36</a></div>
+      <a class="cta" href="tel:+78412573636">Позвонить</a>
+      <div class="main-phone">
+        Телефоны: 
+        <a href="tel:+78412573636">77-36-36</a>, 
+        <a href="tel:+79022073636">+7 (902) 207-36-36</a>, 
+        <a href="tel:+78412571515">77-15-15</a>
+      </div>
     </section>
 
     <section class="usps">
@@ -41,25 +47,26 @@
     </section>
 
     <section class="gallery">
-      <h2>Оборудование</h2>
+      <h2>Наше оборудование</h2>
       <div class="gallery-list">
         <div class="gallery-item">
-          <img src="equipment1.jpg" alt="Оборудование 1" class="gallery-img">
-          <span>Мощный илосос</span>
+          <img src="equipment1.jpg" alt="Илосос" class="gallery-img">
+          <span>Илосос повышенной мощности</span>
         </div>
         <div class="gallery-item">
-          <img src="equipment2.jpg" alt="Оборудование 2" class="gallery-img">
+          <img src="equipment2.jpg" alt="Гидродинамика" class="gallery-img">
           <span>Гидродинамическая машина</span>
         </div>
         <div class="gallery-item">
-          <img src="equipment3.jpg" alt="Оборудование 3" class="gallery-img">
+          <img src="equipment3.jpg" alt="Видеоинспекция" class="gallery-img">
           <span>Видеоинспекция труб</span>
         </div>
         <div class="gallery-item">
-          <img src="equipment4.jpg" alt="Оборудование 4" class="gallery-img">
-          <span>Ручной инструмент</span>
+          <img src="equipment4.jpg" alt="Ручной инструмент" class="gallery-img">
+          <span>Профессиональный инструмент</span>
         </div>
       </div>
+      <div class="gallery-desc">Все фото — реальные, техника всегда готова к выезду!</div>
     </section>
   </main>
 
