--- a/services.html
+++ b/services.html
@@ -11,11 +11,12 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html" class="active">Услуги</a>
+        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
@@ -41,35 +42,42 @@
         <h3>Гидродинамическая прочистка</h3>
       </div>
       <div class="service-card">
-        <img src="mechanical-cleaning.jpg" alt="Механическая прочистка" class="service-img">
+        <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
         <div class="service-overlay">
           Удаляем сложные засоры тросом, машинами и ручным инструментом.
         </div>
         <h3>Механическая прочистка</h3>
       </div>
       <div class="service-card">
-        <img src="septic-cleaning.jpg" alt="Откачка ям" class="service-img">
+        <img src="septic.jpg" alt="Откачка ям" class="service-img">
         <div class="service-overlay">
           Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд.
         </div>
         <h3>Откачка выгребных ям и септиков</h3>
       </div>
       <div class="service-card">
-        <img src="video-inspection.jpg" alt="Видеоинспекция" class="service-img">
+        <img src="bio-wc.jpg" alt="Биотуалеты" class="service-img">
+        <div class="service-overlay">
+          Откачка и мойка биотуалетов, заправка дезинфицирующими средствами.
+        </div>
+        <h3>Откачка и мойка биотуалетов</h3>
+      </div>
+      <div class="service-card">
+        <img src="video.jpg" alt="Видеоинспекция" class="service-img">
         <div class="service-overlay">
           Осмотр труб с помощью камеры. Диагностика и предупреждение аварий.
         </div>
         <h3>Видеоинспекция канализации</h3>
       </div>
       <div class="service-card">
-        <img src="well-search.jpg" alt="Поиск колодцев" class="service-img">
+        <img src="search.jpg" alt="Поиск колодцев" class="service-img">
         <div class="service-overlay">
           Поиск скрытых колодцев и элементов канализации для ремонта и обслуживания.
         </div>
         <h3>Поиск скрытых колодцев</h3>
       </div>
       <div class="service-card">
-        <img src="contract-org.jpg" alt="Обслуживание организаций" class="service-img">
+        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
         <div class="service-overlay">
           Сервис для предприятий и юр. лиц. Официальные договора, документы, гарантия.
         </div>
