--- a/about.html
+++ b/about.html
@@ -11,18 +11,18 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html" class="active">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
   </header>
-
   <main>
     <h1>О компании</h1>
     <p>«Золотарь 58» — профессиональные услуги по откачке и прочистке канализации в Пензе и области.</p>
@@ -30,7 +30,6 @@
     <p>Работаем с физическими и юридическими лицами. Официальные договоры, все необходимые документы, оплата по счету и наличными.</p>
     <p>Качество и оперативность гарантированы!</p>
   </main>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
