--- a/licenses.html
+++ b/licenses.html
@@ -11,18 +11,18 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html" class="active">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
   </header>
-
   <main>
     <h1>Сертификаты и лицензии</h1>
     <div class="licenses-list">
@@ -36,7 +36,6 @@
       </div>
     </div>
   </main>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
