--- a/contacts.html
+++ b/contacts.html
@@ -11,33 +11,34 @@
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
+        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html">О компании</a>
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html" class="active">Контакты</a>
       </nav>
     </div>
   </header>
-
   <main>
     <h1>Контакты</h1>
     <div class="contacts-box">
+      <p><strong>Телефоны:</strong></p>
       <p>
-        <strong>Телефон:</strong>
-        <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a>
+        <a href="tel:+78412573636" class="phone-link">77-36-36</a><br>
+        <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a><br>
+        <a href="tel:+78412571515" class="phone-link">77-15-15</a>
       </p>
       <p>
         <strong>Email:</strong>
-        <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a>
+        <a href="mailto:zolotar85@list.ru">zolotar58@list.ru</a>
       </p>
       <p class="contacts-desc">Звоните — работаем 24/7, выезд по Пензе и области</p>
     </div>
   </main>
-
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
