--- a/index.html
+++ b/index.html
@@ -2,73 +2,45 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Золотарь 58 — Ассенизаторские услуги Пенза</title>
+  <title>Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
+  <script src="theme-switcher.js" defer></script>
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
-        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
+        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
 
-  <main>
-    <section class="main-intro">
-      <h1>Откачка и прочистка канализации 24/7</h1>
-      <p class="main-subtitle">
-        Современное оборудование, оперативный выезд, гарантия качества.<br>
-        Работаем по Пензе и области для физ. и юр. лиц.
-      </p>
-      <a class="cta" href="tel:+78412573636">Позвонить</a>
-      <div class="main-phone">
-        Телефоны: 
-        <a href="tel:+78412573636">77-36-36</a>, 
-        <a href="tel:+79022073636">+7 (902) 207-36-36</a>, 
-        <a href="tel:+78412571515">77-15-15</a>
-      </div>
-    </section>
+  <section class="main-intro">
+    <h1>Откачка и прочистка канализации 24/7</h1>
+    <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
+    <a class="cta" href="contacts.html">Вызвать специалиста</a>
+  </section>
 
-    <section class="usps">
-      <div class="usp-box"><span class="usp-icon">📞</span> Работаем 24/7</div>
-      <div class="usp-box"><span class="usp-icon">💧</span> Современное оборудование</div>
-      <div class="usp-box"><span class="usp-icon">📄</span> Договоры для юр. лиц</div>
-    </section>
-
-    <section class="gallery">
-      <h2>Наше оборудование</h2>
-      <div class="gallery-list">
-        <div class="gallery-item">
-          <img src="equipment1.jpg" alt="Илосос" class="gallery-img">
-          <span>Илосос повышенной мощности</span>
-        </div>
-        <div class="gallery-item">
-          <img src="equipment2.jpg" alt="Гидродинамика" class="gallery-img">
-          <span>Гидродинамическая машина</span>
-        </div>
-        <div class="gallery-item">
-          <img src="equipment3.jpg" alt="Видеоинспекция" class="gallery-img">
-          <span>Видеоинспекция труб</span>
-        </div>
-        <div class="gallery-item">
-          <img src="equipment4.jpg" alt="Ручной инструмент" class="gallery-img">
-          <span>Профессиональный инструмент</span>
-        </div>
-      </div>
-      <div class="gallery-desc">Все фото — реальные, техника всегда готова к выезду!</div>
-    </section>
-  </main>
+  <section class="main">
+    <div class="container">
+      <h2>Почему выбирают нас</h2>
+      <ul>
+        <li>Аварийный выезд 24/7</li>
+        <li>Гидродинамическая и механическая прочистка</li>
+        <li>Откачка септиков, ям, биотуалетов, колодцев</li>
+        <li>Видеоинспекция и поиск скрытых колодцев</li>
+        <li>Работаем с юр. и физ. лицами, нал/безнал</li>
+      </ul>
+    </div>
+  </section>
 
   <footer>
     <div class="container">
