--- a/services.html
+++ b/services.html
@@ -4,87 +4,74 @@
   <meta charset="UTF-8">
   <title>Услуги — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
+  <script src="theme-switcher.js" defer></script>
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
-        <a href="services.html" class="active">Услуги</a>
-        <a href="orgservices.html">Юр. лицам</a>
+        <a href="services.html" style="color:#2478e2; font-weight:700;">Услуги</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
+        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
 
   <main>
-    <h1>Наши услуги</h1>
-    <div class="services-list">
-      <div class="service-card">
-        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="service-img">
-        <div class="service-overlay">
-          Быстрая помощь при любых засорах. Механическая и гидродинамическая прочистка труб.
-        </div>
+    <section class="main-intro" style="margin-top:35px;">
+      <h1>Наши услуги</h1>
+      <p class="main-subtitle" style="margin-bottom:24px;">Полный спектр работ по откачке и прочистке канализации, диагностике и обслуживанию сетей.</p>
+    </section>
+
+    <section class="service-list">
+      <div class="service-item">
         <h3>Аварийная прочистка канализации</h3>
+        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка" class="method-img">
+        <p>Быстрая и эффективная помощь при любых засорах. Используем механическую и гидродинамическую прочистку труб.</p>
       </div>
-      <div class="service-card">
-        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
-        <div class="service-overlay">
-          Вода под высоким давлением очищает трубы от наростов, жира и ржавчины.
-        </div>
+      <div class="service-item">
         <h3>Гидродинамическая прочистка</h3>
+        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="method-img">
+        <p>Вода под высоким давлением очищает трубы от наростов, жира и ржавчины. Безопасно для всех типов труб, долговременный эффект.</p>
       </div>
-      <div class="service-card">
-        <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
-        <div class="service-overlay">
-          Удаляем сложные засоры тросом, машинами и ручным инструментом.
-        </div>
+      <div class="service-item">
         <h3>Механическая прочистка</h3>
+        <img src="mechanical.jpg" alt="Механическая прочистка" class="method-img">
+        <p>Удаляем сложные засоры тросом, специальными машинами и ручным инструментом. Эффективно даже при старых трубах и \"застарелых\" пробках.</p>
       </div>
-      <div class="service-card">
-        <img src="septic.jpg" alt="Откачка ям" class="service-img">
-        <div class="service-overlay">
-          Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд.
-        </div>
-        <h3>Откачка выгребных ям и септиков</h3>
+      <div class="service-item">
+        <h3>Откачка выгребных ям, септиков, биотуалетов</h3>
+        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="method-img">
+        <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка, индивидуальный подход.</p>
       </div>
-      <div class="service-card">
-        <img src="bio-wc.jpg" alt="Биотуалеты" class="service-img">
-        <div class="service-overlay">
-          Откачка и мойка биотуалетов, заправка дезинфицирующими средствами.
-        </div>
-        <h3>Откачка и мойка биотуалетов</h3>
-      </div>
-      <div class="service-card">
-        <img src="video.jpg" alt="Видеоинспекция" class="service-img">
-        <div class="service-overlay">
-          Осмотр труб с помощью камеры. Диагностика и предупреждение аварий.
-        </div>
+      <div class="service-item">
         <h3>Видеоинспекция канализации</h3>
+        <img src="video.jpg" alt="Видеоинспекция канализации" class="method-img">
+        <p>Осмотр внутренних стенок труб с помощью видеокамеры — позволяет обнаружить любые проблемы и предотвратить аварии. После диагностики даём полный отчёт.</p>
       </div>
-      <div class="service-card">
-        <img src="search.jpg" alt="Поиск колодцев" class="service-img">
-        <div class="service-overlay">
-          Поиск скрытых колодцев и элементов канализации для ремонта и обслуживания.
-        </div>
+      <div class="service-item">
         <h3>Поиск скрытых колодцев</h3>
+        <img src="search.jpg" alt="Поиск скрытых колодцев" class="method-img">
+        <p>Находим скрытые колодцы и элементы канализации — для ремонта, обслуживания и предотвращения аварийных ситуаций.</p>
       </div>
-      <div class="service-card">
-        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
-        <div class="service-overlay">
-          Сервис для предприятий и юр. лиц. Официальные договора, документы, гарантия.
-        </div>
+      <div class="service-item">
         <h3>Обслуживание организаций по договору</h3>
+        <img src="service-org.jpg" alt="Обслуживание организаций по договору" class="method-img">
+        <p>Регулярное сервисное обслуживание предприятий и юридических лиц. Официальные договора, вся документация, гарантия и отчётность.</p>
       </div>
+    </section>
+
+    <div style="text-align:center; margin:38px 0 20px 0;">
+      <a href="contacts.html" class="cta">Оставить заявку</a>
     </div>
   </main>
+
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
