--- a/about.html
+++ b/about.html
@@ -4,32 +4,46 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
+  <script src="theme-switcher.js" defer></script>
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
-        <a href="orgservices.html">Юр. лицам</a>
-        <a href="about.html" class="active">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
+        <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
         <a href="contacts.html">Контакты</a>
+        <button id="theme-toggle" type="button" style="margin-left:18px;" class="theme-btn">🌙 Темная тема</button>
       </nav>
     </div>
   </header>
+
   <main>
-    <h1>О компании</h1>
-    <p>«Золотарь 58» — профессиональные услуги по откачке и прочистке канализации в Пензе и области.</p>
-    <p>Более 10 лет опыта, собственный автопарк техники, современное оборудование для гидродинамической и механической чистки, видеоинспекции трубопроводов.</p>
-    <p>Работаем с физическими и юридическими лицами. Официальные договоры, все необходимые документы, оплата по счету и наличными.</p>
-    <p>Качество и оперативность гарантированы!</p>
+    <section class="main-intro" style="margin-top:40px;">
+      <h1>О компании «Золотарь 58»</h1>
+      <p class="main-subtitle" style="margin-bottom:34px;">Ассенизаторские услуги, прочистка и откачка канализации в Пензе и области — качественно и без выходных.</p>
+      <div class="about-text">
+        <p>
+          «Золотарь 58» — это современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Мы работаем как с частными клиентами, так и с юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
+          В нашем распоряжении — современное гидродинамическое и механическое оборудование, позволяющее эффективно устранять любые засоры, проводить видеоинспекцию труб и выполнять полный спектр работ по обслуживанию канализационных систем.<br><br>
+          Наши преимущества:<br>
+          — Круглосуточный аварийный выезд и оперативное реагирование;<br>
+          — Гарантия качества и честные цены;<br>
+          — Опытные сотрудники с допуском и необходимой квалификацией;<br>
+          — Безопасные технологии, щадящие любые виды труб;<br>
+          — Возможность оплаты наличными и по безналу;<br>
+          — Удобный сервис: заявку можно оставить прямо на сайте.<br><br>
+          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы наши клиенты всегда были довольны результатом. Оставляйте заявку — мы быстро приедем и решим любую задачу!
+        </p>
+      </div>
+    </section>
   </main>
+
   <footer>
     <div class="container">
       <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
