--- a/index.html
+++ b/index.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Золотарь 58</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css" id="theme-link">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=1024">
+    <title>Ассенизатор Zotkin – Откачка и прочистка в Пензе</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container header-flex">
-      <a href="index.html" class="logo-link">
-        <img src="logo.png" class="logo-img" alt="Золотарь 58">
-        <span class="logo-title">Золотарь 58</span>
-      </a>
-      <nav class="nav">
-        <a href="services.html">Услуги</a>
-        <a href="about.html">О компании</a>
-        <a href="contacts.html">Контакты</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <div class="logo-container">
+            <img src="logo.svg" alt="Zotkin Логотип" class="logo">
+            <div class="company-title">
+                <h1>Ассенизатор Zotkin</h1>
+                <p>Откачка, чистка и промывка канализации в Пензе</p>
+            </div>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Главная</a></li>
+                <li><a href="about.html">О компании</a></li>
+                <li><a href="licenses.html">Лицензии</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="main-info">
+            <h2>Услуги по откачке и прочистке канализации</h2>
+            <p>
+                Профессиональная ассенизаторская техника для откачки и чистки канализации, выгребных ям, септиков, колодцев и ливнёвок по городу Пенза и области. Оперативно, качественно, без выходных.
+            </p>
+            <div class="call-button-container">
+                <a href="tel:+79603307739" class="call-button">Позвонить: +7 (960) 330-77-39</a>
+            </div>
+        </section>
 
-  <section class="main-intro">
-    <h1>Откачка и прочистка канализации 24/7</h1>
-    <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
-    <a class="cta" href="contacts.html">Вызвать специалиста</a>
-  </section>
-
-  <section class="main">
-    <div class="container">
-      <h2>Почему выбирают нас</h2>
-      <ul>
-        <li>Аварийный выезд 24/7</li>
-        <li>Гидродинамическая и механическая прочистка</li>
-        <li>Откачка септиков, ям, биотуалетов, колодцев</li>
-        <li>Видеоинспекция и поиск скрытых колодцев</li>
-        <li>Работаем с юр. и физ. лицами, нал/безнал</li>
-      </ul>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
-    </div>
-  </footer>
+        <section class="examples">
+            <h2>Примеры нашей техники</h2>
+            <div class="examples-gallery">
+                <div class="example-photo"><img src="assets/truck-placeholder.jpg" alt="Ассенизаторская техника"></div>
+                <div class="example-photo"><img src="assets/equipment-placeholder.jpg" alt="Оборудование"></div>
+                <div class="example-photo"><img src="assets/truck2-placeholder.jpg" alt="Техника"></div>
+                <div class="example-photo"><img src="assets/jet-wash-placeholder.jpg" alt="Гидродинамическая промывка"></div>
+                <!-- Добавь свои реальные фото, если будут -->
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Zotkin. Ассенизаторские услуги в Пензе.</p>
+    </footer>
 </body>
 </html>
