--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
-    <title>Ассенизатор Zotkin – Откачка и прочистка в Пензе</title>
+    <title>Золотарь 58</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
