--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="logo.svg" alt="Zotkin Логотип" class="logo">
+            <img src="logo.jpg" alt="Zotkin Логотип" class="logo">
             <div class="company-title">
                 <h1>Ассенизатор Zotkin</h1>
                 <p>Откачка, чистка и промывка канализации в Пензе</p>
