--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css" id="theme-link">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
@@ -16,6 +16,7 @@
       <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
+        <a href="licenses.html">Лицензии</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -27,16 +28,16 @@
       <p class="main-subtitle" style="margin-bottom:34px;">Ассенизаторские услуги, прочистка и откачка канализации в Пензе и области — качественно и без выходных.</p>
       <div class="about-text">
         <p>
-          «Золотарь 58» — это современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Мы работаем как с частными клиентами, так и с юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
-          В нашем распоряжении — современное гидродинамическое и механическое оборудование, позволяющее эффективно устранять любые засоры, проводить видеоинспекцию труб и выполнять полный спектр работ по обслуживанию канализационных систем.<br><br>
-          Наши преимущества:<br>
-          — Круглосуточный аварийный выезд и оперативное реагирование;<br>
+          «Золотарь 58» — современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Работаем с частными и юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
+          В распоряжении компании — современное гидродинамическое и механическое оборудование для эффективного устранения засоров, видеоинспекции труб и полного спектра работ по обслуживанию канализационных систем.<br><br>
+          Преимущества сотрудничества:<br>
+          — Круглосуточный аварийный выезд;<br>
           — Гарантия качества и честные цены;<br>
-          — Опытные сотрудники с допуском и необходимой квалификацией;<br>
-          — Безопасные технологии, щадящие любые виды труб;<br>
-          — Возможность оплаты наличными и по безналу;<br>
-          — Удобный сервис: заявку можно оставить прямо на сайте.<br><br>
-          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы наши клиенты всегда были довольны результатом. Оставляйте заявку — мы быстро приедем и решим любую задачу!
+          — Опытные сотрудники с необходимой квалификацией;<br>
+          — Безопасные технологии для любых видов труб;<br>
+          — Оплата наличными и по безналичному расчету.<br><br>
+          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы наши клиенты всегда оставались довольны результатом. 
+          Связаться с нами можно по телефону, указанному на сайте.
         </p>
       </div>
     </section>
