--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html">Лицензии</a>
+        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -25,7 +25,7 @@
   <section class="main-intro">
     <h1>Откачка и прочистка канализации 24/7</h1>
     <p class="main-subtitle">Работаем по Пензе и области. Современное оборудование, аварийный выезд, без выходных. Гарантия качества.</p>
-    <a class="cta phone-btn" href="tel:+79626680870">Позвонить</a>
+    <a class="cta" href="tel:+79022073636">Позвонить</a>
   </section>
 
   <section class="main">
@@ -41,17 +41,29 @@
     </div>
   </section>
 
-  <section class="examples">
-    <div class="container">
-      <h2>Примеры работ и техника</h2>
-      <div class="examples-gallery">
-        <div class="example-photo"><img src="gallery/1.jpg" alt="Техника 1"></div>
-        <div class="example-photo"><img src="gallery/2.jpg" alt="Техника 2"></div>
-        <div class="example-photo"><img src="gallery/3.jpg" alt="Техника 3"></div>
-        <div class="example-photo"><img src="gallery/4.jpg" alt="Техника 4"></div>
+  <!-- Галерея техники -->
+  <section class="gallery">
+    <h2>Наше оборудование</h2>
+    <div class="gallery-list">
+      <div class="gallery-item">
+        <img src="equipment1.jpg" alt="Ассенизаторская машина" class="gallery-img">
+        <span>Ассенизаторская машина</span>
+      </div>
+      <div class="gallery-item">
+        <img src="equipment2.jpg" alt="Гидродинамическая установка" class="gallery-img">
+        <span>Гидродинамическая установка</span>
+      </div>
+      <div class="gallery-item">
+        <img src="equipment3.jpg" alt="Видеоинспекция" class="gallery-img">
+        <span>Видеоинспекционная система</span>
+      </div>
+      <div class="gallery-item">
+        <img src="equipment4.jpg" alt="Механическое оборудование" class="gallery-img">
+        <span>Механическое оборудование</span>
       </div>
     </div>
   </section>
+  <!-- /Галерея техники -->
 
   <footer>
     <div class="container">
