--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
-        <a href="licenses.html">Лицензии</a>
+        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
@@ -29,15 +29,14 @@
       <div class="about-text">
         <p>
           «Золотарь 58» — современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Работаем с частными и юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
-          В распоряжении компании — современное гидродинамическое и механическое оборудование для эффективного устранения засоров, видеоинспекции труб и полного спектра работ по обслуживанию канализационных систем.<br><br>
-          Преимущества сотрудничества:<br>
-          — Круглосуточный аварийный выезд;<br>
+          В нашем распоряжении — современное гидродинамическое и механическое оборудование, позволяющее эффективно устранять любые засоры, проводить видеоинспекцию труб и выполнять полный спектр работ по обслуживанию канализационных систем.<br><br>
+          Наши преимущества:<br>
+          — Круглосуточный аварийный выезд и оперативное реагирование;<br>
           — Гарантия качества и честные цены;<br>
-          — Опытные сотрудники с необходимой квалификацией;<br>
-          — Безопасные технологии для любых видов труб;<br>
+          — Опытные сотрудники с допуском и необходимой квалификацией;<br>
+          — Безопасные технологии, щадящие любые виды труб;<br>
           — Оплата наличными и по безналичному расчету.<br><br>
-          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы наши клиенты всегда оставались довольны результатом. 
-          Связаться с нами можно по телефону, указанному на сайте.
+          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы клиенты всегда были довольны результатом.
         </p>
       </div>
     </section>
