--- a/licenses.html
+++ b/licenses.html
@@ -7,24 +7,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="bg-pattern"></div>
   <header class="header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
-        <img src="logo.svg" class="logo-img" alt="Золотарь 58">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <nav class="nav">
         <a href="services.html">Услуги</a>
-        <a href="orgservices.html">Юр. лицам</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html" class="active">Сертификаты</a>
+        <a href="licenses.html" style="color:#2478e2; font-weight:700;">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
     </div>
   </header>
   <main>
-    <h1>Сертификаты и лицензии</h1>
+    <section class="main-intro">
+      <h1>Сертификаты и лицензии</h1>
+      <p class="main-subtitle">В ближайшее время здесь появятся сертификаты и лицензии, подтверждающие квалификацию и право ведения деятельности.</p>
+    </section>
     <div class="licenses-list">
       <div class="license-item">
         <img src="license1.jpg" alt="Скоро здесь появится сертификат" class="license-img">
