--- a/licenses.html
+++ b/licenses.html
@@ -1,20 +1,46 @@
-<main>
-  <h1>Сертификаты и лицензии</h1>
-  <div class="licenses-list">
-    <div class="license-item">
-      <img src="license1.jpg" alt="Сертификат" class="license-img" onclick="openModal(this)">
-      <span>Сертификат</span>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Сертификаты и лицензии — Золотарь 58</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="header">
+    <div class="container header-flex">
+      <a href="index.html" class="logo-link">
+        <img src="logo.png" class="logo-img" alt="Золотарь 58">
+        <span class="logo-title">Золотарь 58</span>
+      </a>
+      <nav class="nav">
+        <a href="services.html">Услуги</a>
+        <a href="about.html">О компании</a>
+        <a href="licenses.html" style="color:#2478e2; font-weight:700;">Сертификаты</a>
+        <a href="contacts.html">Контакты</a>
+      </nav>
     </div>
-    <div class="license-item">
-      <img src="license2.jpg" alt="Лицензия" class="license-img" onclick="openModal(this)">
-      <span>Лицензия</span>
+  </header>
+  <main>
+    <section class="main-intro">
+      <h1>Сертификаты и лицензии</h1>
+      <p class="main-subtitle">В ближайшее время здесь появятся сертификаты и лицензии, подтверждающие квалификацию и право ведения деятельности.</p>
+    </section>
+    <div class="licenses-list">
+      <div class="license-item">
+        <img src="license1.jpg" alt="Скоро здесь появится сертификат" class="license-img">
+        <span>Скоро здесь появится сертификат</span>
+      </div>
+      <div class="license-item">
+        <img src="license2.jpg" alt="Скоро здесь появится лицензия" class="license-img">
+        <span>Скоро здесь появится лицензия</span>
+      </div>
     </div>
-  </div>
-
-  <!-- Модальное окно -->
-  <div id="imgModal" class="img-modal" onclick="closeModal()">
-    <span class="close-modal">&times;</span>
-    <img class="modal-content" id="modalImg">
-    <div id="modalCaption"></div>
-  </div>
-</main>
+  </main>
+  <footer>
+    <div class="container">
+      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+    </div>
+  </footer>
+</body>
+</html>
