--- a/contacts.html
+++ b/contacts.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Контакты — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" id="theme-link">
 </head>
 <body>
   <header class="header">
@@ -16,7 +16,6 @@
       <nav class="nav">
         <a href="services.html">Услуги</a>
         <a href="about.html">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html" style="color:#2478e2; font-weight:700;">Контакты</a>
       </nav>
     </div>
@@ -25,17 +24,20 @@
   <main>
     <section class="main-intro" style="margin-top:35px;">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Связаться с нами можно 24/7 по телефону или email:</p>
+      <p class="main-subtitle" style="margin-bottom:18px;">Свяжитесь с нами любым удобным способом — работаем 24/7!</p>
     </section>
-    <section class="contacts-box">
-      <b>Телефон:</b><br>
-      <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a><br><br>
-      <b>Email:</b><br>
-      <a href="mailto:zolotar85@list.ru">zolotar58@list.ru</a><br><br>
-      <b>Время работы:</b><br>
-      Круглосуточно, без выходных<br>
-      <div class="contacts-desc">
-        Только выезд, офис не предусмотрен.
+    <section class="contacts-block">
+      <div class="contacts-flex">
+        <div class="contacts-details">
+          <b>Телефон:</b><br>
+          <a href="tel:+79022073636" class="phone-link">+7 (902) 207-36-36</a>
+          <span class="short-phone"><b>Короткий номер:</b> <a href="tel:+78412773636">77-36-36</a></span>
+          <br><br>
+          <b>Email:</b><br>
+          <a href="mailto:zolotar85@list.ru">zolotar85@list.ru</a><br><br>
+          <b>Время работы:</b><br>
+          Круглосуточно, без выходных<br>
+        </div>
       </div>
     </section>
   </main>
