--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
   <main>
     <section class="main-intro" style="margin-top:35px;">
       <h1>Контакты</h1>
-      <p class="main-subtitle" style="margin-bottom:18px;">Свяжитесь с нами любым удобным способом — работаем 24/7!</p>
+      <p class="main-subtitle" style="margin-bottom:18px;">Свяжитесь с нами — работаем 24/7!</p>
     </section>
     <section class="contacts-block">
       <div class="contacts-flex">
