--- a/about.html
+++ b/about.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>О компании — Золотарь 58</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Профессиональные ассенизаторские услуги в Пензе и области. О компании Золотарь 58 — гарантии, опыт, современные технологии.">
+  <meta property="og:title" content="О компании — Золотарь 58">
+  <meta property="og:description" content="Профессиональные услуги по прочистке и откачке канализации. Круглосуточно, с гарантией качества.">
+  <meta property="og:image" content="logo.png">
+  <link rel="icon" type="image/png" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,33 +24,49 @@
         <a href="licenses.html">Сертификаты</a>
         <a href="contacts.html">Контакты</a>
       </nav>
+      <button class="burger" aria-label="Открыть меню">
+        <span></span>
+      </button>
     </div>
   </header>
-
   <main>
     <section class="main-intro" style="margin-top:40px;">
       <h1>О компании «Золотарь 58»</h1>
       <p class="main-subtitle" style="margin-bottom:34px;">Ассенизаторские услуги, прочистка и откачка канализации в Пензе и области — качественно и без выходных.</p>
       <div class="about-text">
         <p>
-          «Золотарь 58» — современная компания, специализирующаяся на аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Работаем с частными и юридическими лицами, заключаем официальные договоры на регулярное обслуживание организаций.<br><br>
-          В нашем распоряжении — современное гидродинамическое и механическое оборудование, позволяющее эффективно устранять любые засоры, проводить видеоинспекцию труб и выполнять полный спектр работ по обслуживанию канализационных систем.<br><br>
-          Наши преимущества:<br>
-          — Круглосуточный аварийный выезд и оперативное реагирование;<br>
-          — Гарантия качества и честные цены;<br>
-          — Опытные сотрудники с допуском и необходимой квалификацией;<br>
-          — Безопасные технологии, щадящие любые виды труб;<br>
-          — Оплата наличными и по безналичному расчету.<br><br>
-          Мы нацелены на долгосрочное сотрудничество и делаем всё, чтобы клиенты всегда были довольны результатом.
+          «Золотарь 58» — современная компания по аварийной прочистке и профессиональной откачке канализации, септиков, колодцев и других инженерных сетей. Работаем с частными и юридическими лицами, заключаем официальные договоры на обслуживание предприятий.<br><br>
+          В нашем распоряжении — профессиональное гидродинамическое и механическое оборудование, видеоинспекция труб, полный спектр работ по обслуживанию канализации.<br><br>
+          <b>Наши преимущества:</b><br>
+          — Аварийный выезд 24/7 и быстрое реагирование;<br>
+          — Гарантия качества, прозрачные цены;<br>
+          — Опытные сотрудники с квалификацией;<br>
+          — Современные технологии, безопасные для труб;<br>
+          — Оплата по счету или наличными.
         </p>
       </div>
     </section>
   </main>
-
   <footer>
     <div class="container">
-      <p>© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
+      <p class="footer-text">© 2025 Золотарь 58 — ИП Зоткин А.И.</p>
     </div>
   </footer>
+  <script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const burger = document.querySelector('.burger');
+    const nav = document.querySelector('.nav');
+    burger.addEventListener('click', function () {
+      nav.classList.toggle('open');
+      burger.classList.toggle('active');
+    });
+    document.addEventListener('click', function (e) {
+      if (!burger.contains(e.target) && !nav.contains(e.target)) {
+        nav.classList.remove('open');
+        burger.classList.remove('active');
+      }
+    });
+  });
+  </script>
 </body>
 </html>
