--- a/services.html
+++ b/services.html
@@ -36,30 +36,37 @@
     </section>
     <section class="services-list">
       <div class="service-card">
+        <img src="emergency-cleaning.jpg" alt="Аварийная прочистка канализации" class="service-img">
         <h3>Аварийная прочистка канализации</h3>
         <p>Быстрая и эффективная помощь при любых засорах. Механическая и гидродинамическая очистка труб.</p>
       </div>
       <div class="service-card">
+        <img src="hydrodynamic-cleaning.jpg" alt="Гидродинамическая прочистка" class="service-img">
         <h3>Гидродинамическая прочистка</h3>
         <p>Очищаем трубы водой под давлением — быстро, безопасно, долговечно.</p>
       </div>
       <div class="service-card">
+        <img src="mechanical.jpg" alt="Механическая прочистка" class="service-img">
         <h3>Механическая прочистка</h3>
         <p>Удаляем сложные засоры тросом и спецмашинами. Эффективно даже при старых трубах.</p>
       </div>
       <div class="service-card">
+        <img src="septic.jpg" alt="Откачка ям, септиков, биотуалетов" class="service-img">
         <h3>Откачка ям, септиков, биотуалетов</h3>
         <p>Быстро и аккуратно откачиваем любые объёмы — до 12 куб.м за выезд. Илосос, санитарная обработка.</p>
       </div>
       <div class="service-card">
+        <img src="video.jpg" alt="Видеоинспекция канализации" class="service-img">
         <h3>Видеоинспекция канализации</h3>
         <p>Осмотр труб камерой — выявляем все скрытые проблемы, предоставляем отчёт.</p>
       </div>
       <div class="service-card">
+        <img src="search.jpg" alt="Поиск скрытых колодцев" class="service-img">
         <h3>Поиск скрытых колодцев</h3>
         <p>Находим скрытые элементы канализации для ремонта и обслуживания.</p>
       </div>
       <div class="service-card">
+        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
         <h3>Обслуживание организаций</h3>
         <p>Регулярное сервисное обслуживание предприятий. Официальные договора и отчётность.</p>
       </div>
