--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
   <meta property="og:description" content="Свяжитесь с нами — работаем 24/7.">
   <meta property="og:image" content="logo.png">
   <link rel="icon" type="image/png" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
