--- a/about.html
+++ b/about.html
@@ -19,11 +19,11 @@
       <img src="logo.png" class="logo-img" alt="Золотарь 58">
       <span class="logo-title">Золотарь 58</span>
     </a>
-    <!-- СЮДА! -->
-    <div class="header-title-mobile">Золотарь 58</div>
+    <!-- Кликабельный заголовок только для мобилы! -->
+    <a href="index.html" class="header-title-mobile">Золотарь 58</a>
     <nav class="nav">
       <a href="services.html">Услуги</a>
-      <a href="about.html" style="color:#2478e2; font-weight:700;">О компании</a>
+      <a href="about.html">О компании</a>
       <a href="licenses.html">Сертификаты</a>
       <a href="contacts.html">Контакты</a>
     </nav>
