--- a/contacts.html
+++ b/contacts.html
@@ -87,14 +87,14 @@
     </section>
     <!-- Карта -->
     <div class="contacts-map-wrap">
-      <div class="contacts-map-title">Мы на карте:</div>
-      <iframe class="contacts-map"
-        src="https://yandex.ru/map-widget/v1/?um=constructor%3A0cdd96ea0dba431f10ac389e0099b1c95c07e3db18e9858ce29926d0972f303e&amp;source=constructor"
-        allowfullscreen
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-        title="Золотарь 58 на карте"
-      ></iframe>
+  <div class="contacts-map-title">Мы на карте:</div>
+  <iframe class="contacts-map"
+    src="https://yandex.ru/map-widget/v1/?um=search%3A%7BПенза%2C%20улица%20Пушанина%2C%2046%D0%90%7D&ll=45.044985%2C53.186653&z=17"
+    allowfullscreen
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"
+    title="Золотарь 58 на карте"
+  ></iframe>
     </div>
   </main>
   <footer>
